--- a/package.json
+++ b/package.json
@@ -54,5 +54,495 @@
     "bracketSameLine": false,
     "arrowParens": "always",
     "endOfLine": "lf"
-  }
+  },
+  "description": "<a href=\"https://github.com/kriasoft/react-starter-kit?sponsor=1\"><img src=\"https://img.shields.io/badge/-GitHub-%23555.svg?logo=github-sponsors\" height=\"20\"></a> <a href=\"http://patreon.com/koistya\"><img src=\"https://img.shields.io/badge/dynamic/json?color=%23ff424d&label=Patreon&&query=data.attributes.patron_count&suffix=%20patrons&url=https%3A%2F%2Fwww.patreon.com%2Fapi%2Fcampaigns%2F233228\" height=\"20\"></a> <a href=\"https://discord.gg/2nKEnKq\"><img src=\"https://img.shields.io/discord/643523529131950086?label=Chat\" height=\"20\"></a> <a href=\"https://github.com/kriasoft/react-starter-kit/stargazers\"><img src=\"https://img.shields.io/github/stars/kriasoft/react-starter-kit.svg?style=social&label=Star&maxAge=3600\" height=\"20\"></a> <a href=\"https://twitter.com/koistya\"><img src=\"https://img.shields.io/twitter/follow/koistya.svg?style=social&label=Follow&maxAge=3600\" height=\"20\"></a>",
+  "main": "index.js",
+  "dependencies": {
+    "acorn": "^8.10.0",
+    "acorn-jsx": "^5.3.2",
+    "acorn-walk": "^8.2.0",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "app": "^0.0.0",
+    "argparse": "^2.0.1",
+    "aria-query": "^5.3.0",
+    "array-buffer-byte-length": "^1.0.0",
+    "array-includes": "^3.1.6",
+    "array-union": "^2.1.0",
+    "array.prototype.flat": "^1.3.1",
+    "array.prototype.flatmap": "^1.3.1",
+    "array.prototype.tosorted": "^1.1.1",
+    "arraybuffer.prototype.slice": "^1.0.1",
+    "arrify": "^1.0.1",
+    "as-table": "^1.0.55",
+    "assertion-error": "^1.1.0",
+    "ast-types-flow": "^0.0.7",
+    "available-typed-arrays": "^1.0.5",
+    "axe-core": "^4.7.2",
+    "axobject-query": "^3.2.1",
+    "babel-plugin-macros": "^3.1.0",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "better-sqlite3": "^8.5.0",
+    "big-integer": "^1.6.51",
+    "binary-extensions": "^2.2.0",
+    "bindings": "^1.5.0",
+    "bl": "^4.1.0",
+    "blake3-wasm": "^2.1.5",
+    "bplist-parser": "^0.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.9",
+    "buffer": "^5.7.1",
+    "buffer-from": "^1.1.2",
+    "builtins": "^5.0.1",
+    "bundle-name": "^3.0.0",
+    "busboy": "^1.6.0",
+    "cac": "^6.7.14",
+    "cacheable-lookup": "^7.0.0",
+    "cacheable-request": "^10.2.13",
+    "call-bind": "^1.0.2",
+    "caller-callsite": "^2.0.0",
+    "caller-path": "^2.0.0",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "camelcase-keys": "^6.2.2",
+    "caniuse-lite": "^1.0.30001517",
+    "capnp-ts": "^0.7.0",
+    "chai": "^4.3.7",
+    "chalk": "^4.1.2",
+    "check-error": "^1.0.2",
+    "chokidar": "^3.5.3",
+    "chownr": "^1.1.4",
+    "cliui": "^7.0.4",
+    "clsx": "^1.2.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^1.9.0",
+    "cookie": "^0.5.0",
+    "cosmiconfig": "^5.2.1",
+    "cross-spawn": "^7.0.3",
+    "css.escape": "^1.5.1",
+    "csstype": "^3.1.2",
+    "damerau-levenshtein": "^1.0.8",
+    "data-uri-to-buffer": "^4.0.1",
+    "debug": "^4.3.4",
+    "decamelize": "^1.2.0",
+    "decamelize-keys": "^1.1.1",
+    "decompress-response": "^6.0.0",
+    "deep-eql": "^4.1.3",
+    "deep-extend": "^0.6.0",
+    "deep-is": "^0.1.4",
+    "default-browser": "^4.0.0",
+    "default-browser-id": "^3.0.0",
+    "defer-to-connect": "^2.0.1",
+    "define-lazy-prop": "^3.0.0",
+    "define-properties": "^1.2.0",
+    "dequal": "^2.0.3",
+    "detect-libc": "^2.0.2",
+    "diff-sequences": "^29.4.3",
+    "dir-glob": "^3.0.1",
+    "doctrine": "^2.1.0",
+    "dom-helpers": "^5.2.1",
+    "dotenv": "^16.3.1",
+    "duplexer": "^0.1.2",
+    "edge": "^0.0.0",
+    "electron-to-chromium": "^1.4.471",
+    "emoji-regex": "^9.2.2",
+    "end-of-stream": "^1.4.4",
+    "enhanced-resolve": "^5.15.0",
+    "entities": "^4.5.0",
+    "envars": "^0.4.0",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.22.1",
+    "es-set-tostringtag": "^2.0.1",
+    "es-shim-unscopables": "^1.0.0",
+    "es-to-primitive": "^1.2.1",
+    "esbuild": "^0.16.3",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-module-utils": "^2.8.0",
+    "eslint-scope": "^7.2.1",
+    "eslint-visitor-keys": "^3.4.1",
+    "espree": "^9.6.1",
+    "esprima": "^4.0.1",
+    "esquery": "^1.5.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "estree-walker": "^0.6.1",
+    "esutils": "^2.0.3",
+    "event-stream": "^3.3.4",
+    "execa": "^7.1.1",
+    "exit-hook": "^2.2.1",
+    "expand-template": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.3.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.15.0",
+    "faye-websocket": "^0.11.4",
+    "fetch-blob": "^3.2.0",
+    "file-entry-cache": "^6.0.1",
+    "file-uri-to-path": "^1.0.0",
+    "fill-range": "^7.0.1",
+    "find-root": "^1.1.0",
+    "find-up": "^5.0.0",
+    "firebase": "^10.1.0",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.7",
+    "for-each": "^0.3.3",
+    "form-data-encoder": "^2.1.4",
+    "formdata-polyfill": "^4.0.10",
+    "from": "^0.1.7",
+    "fs-constants": "^1.0.0",
+    "fs-extra": "^11.1.1",
+    "fs.realpath": "^1.0.0",
+    "fsevents": "^2.3.2",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.5",
+    "functions-have-names": "^1.2.3",
+    "fx": "^28.0.0",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.0",
+    "get-intrinsic": "^1.2.1",
+    "get-port": "^7.0.0",
+    "get-source": "^2.0.12",
+    "get-stream": "^6.0.1",
+    "get-symbol-description": "^1.0.0",
+    "get-tsconfig": "^4.6.2",
+    "github-from-package": "^0.0.0",
+    "glob": "^7.2.3",
+    "glob-parent": "^5.1.2",
+    "glob-to-regexp": "^0.4.1",
+    "globals": "^13.20.0",
+    "globalthis": "^1.0.3",
+    "globby": "^13.2.2",
+    "goober": "^2.1.13",
+    "gopd": "^1.0.1",
+    "got": "^13.0.0",
+    "graceful-fs": "^4.2.11",
+    "graphemer": "^1.4.0",
+    "hamt_plus": "^1.0.2",
+    "hard-rejection": "^2.1.0",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "hoist-non-react-statics": "^3.3.2",
+    "hono": "^3.3.3",
+    "hosted-git-info": "^4.1.0",
+    "html-rewriter-wasm": "^0.4.1",
+    "http-cache-semantics": "^4.1.1",
+    "http-parser-js": "^0.5.8",
+    "http2-wrapper": "^2.2.0",
+    "human-signals": "^4.3.1",
+    "iconv-lite": "^0.6.3",
+    "idb": "^7.0.1",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.2.4",
+    "immediate": "^3.0.6",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "internal-slot": "^1.0.5",
+    "is-array-buffer": "^3.0.2",
+    "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.12.1",
+    "is-date-object": "^1.0.5",
+    "is-directory": "^0.3.1",
+    "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-inside-container": "^1.0.0",
+    "is-negative-zero": "^2.0.2",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-path-inside": "^3.0.3",
+    "is-plain-obj": "^1.1.0",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-stream": "^3.0.0",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.12",
+    "is-weakref": "^1.0.2",
+    "is-wsl": "^2.2.0",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "jose": "^4.14.4",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jsesc": "^2.5.2",
+    "json-buffer": "^3.0.1",
+    "json-parse-better-errors": "^1.0.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^1.0.2",
+    "jsonc-parser": "^3.2.0",
+    "jsonfile": "^6.1.0",
+    "jsx-ast-utils": "^3.3.4",
+    "keyv": "^4.5.3",
+    "kind-of": "^6.0.3",
+    "kleur": "^4.1.5",
+    "language-subtag-registry": "^0.3.22",
+    "language-tags": "^1.0.5",
+    "levn": "^0.4.1",
+    "lie": "^3.1.1",
+    "lines-and-columns": "^1.2.4",
+    "local-pkg": "^0.4.3",
+    "localforage": "^1.10.0",
+    "locate-path": "^6.0.0",
+    "lodash-es": "^4.17.21",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.merge": "^4.6.2",
+    "long": "^4.0.0",
+    "loose-envify": "^1.4.0",
+    "loupe": "^2.3.6",
+    "lowercase-keys": "^3.0.0",
+    "lru-cache": "^6.0.0",
+    "magic-string": "^0.30.1",
+    "make-dir": "^3.1.0",
+    "map-obj": "^1.0.1",
+    "map-stream": "^0.1.0",
+    "meow": "^9.0.0",
+    "merge-options": "^3.0.4",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "mime": "^3.0.0",
+    "mimic-fn": "^4.0.0",
+    "mimic-response": "^3.1.0",
+    "min-indent": "^1.0.1",
+    "miniflare": "^3.20230724.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "minimist-options": "^4.1.0",
+    "mkdirp-classic": "^0.5.3",
+    "mlly": "^1.4.0",
+    "ms": "^2.1.2",
+    "mustache": "^4.2.0",
+    "nanoid": "^3.3.6",
+    "napi-build-utils": "^1.0.2",
+    "natural-compare": "^1.4.0",
+    "natural-compare-lite": "^1.4.0",
+    "node-abi": "^3.45.0",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^2.6.7",
+    "node-forge": "^1.3.1",
+    "node-releases": "^2.0.13",
+    "normalize-package-data": "^3.0.3",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^8.0.0",
+    "notistack": "^3.0.1",
+    "npm-run-path": "^5.1.0",
+    "npx-import": "^1.1.4",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.12.3",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "object.entries": "^1.1.6",
+    "object.fromentries": "^2.0.6",
+    "object.hasown": "^1.1.2",
+    "object.values": "^1.1.6",
+    "once": "^1.4.0",
+    "onetime": "^6.0.0",
+    "open": "^9.1.0",
+    "optionator": "^0.9.3",
+    "p-cancelable": "^3.0.0",
+    "p-limit": "^4.0.0",
+    "p-locate": "^5.0.0",
+    "p-try": "^2.2.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "parse-package-name": "^1.0.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-to-regexp": "^6.2.1",
+    "path-type": "^4.0.0",
+    "pathe": "^1.1.1",
+    "pathval": "^1.1.1",
+    "pause-stream": "^0.0.11",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pkg-types": "^1.0.3",
+    "postcss": "^8.4.27",
+    "prebuild-install": "^7.1.1",
+    "prelude-ls": "^1.2.1",
+    "pretty-format": "^29.6.1",
+    "printable-characters": "^1.0.42",
+    "prop-types": "^15.8.1",
+    "protobufjs": "^6.11.3",
+    "ps-tree": "^1.2.0",
+    "pump": "^3.0.0",
+    "punycode": "^2.3.0",
+    "queue-microtask": "^1.2.3",
+    "quick-lru": "^5.1.1",
+    "rc": "^1.2.8",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-refresh": "^0.14.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "react-transition-group": "^4.4.5",
+    "read-pkg": "^5.2.0",
+    "read-pkg-up": "^7.0.1",
+    "readable-stream": "^3.6.2",
+    "readdirp": "^3.6.0",
+    "recoil": "^0.7.7",
+    "redent": "^3.0.0",
+    "regenerator-runtime": "^0.13.11",
+    "regexp.prototype.flags": "^1.5.0",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.22.2",
+    "resolve-alpn": "^1.2.1",
+    "resolve-from": "^4.0.0",
+    "resolve-pkg-maps": "^1.0.0",
+    "responselike": "^3.0.0",
+    "reusify": "^1.0.4",
+    "rfc4648": "^1.5.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.26.3",
+    "rollup-plugin-inject": "^3.0.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-pluginutils": "^2.8.2",
+    "run-applescript": "^5.0.0",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.0.0",
+    "safe-buffer": "^5.2.1",
+    "safe-regex-test": "^1.0.0",
+    "safer-buffer": "^2.1.2",
+    "scheduler": "^0.23.0",
+    "scripts": "^0.0.0",
+    "selfsigned": "^2.1.1",
+    "semver": "^7.5.4",
+    "set-cookie-parser": "^2.6.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.4",
+    "siginfo": "^2.0.0",
+    "signal-exit": "^3.0.7",
+    "simple-concat": "^1.0.1",
+    "simple-get": "^4.0.1",
+    "slash": "^4.0.0",
+    "source-map": "^0.6.1",
+    "source-map-js": "^1.0.2",
+    "source-map-support": "^0.5.21",
+    "sourcemap-codec": "^1.4.8",
+    "spdx-correct": "^3.2.0",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.13",
+    "split": "^0.3.3",
+    "sprintf-js": "^1.0.3",
+    "stackback": "^0.0.2",
+    "stacktracey": "^2.1.8",
+    "std-env": "^3.3.3",
+    "stoppable": "^1.1.0",
+    "stream-combiner": "^0.0.4",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
+    "string.prototype.matchall": "^4.0.8",
+    "string.prototype.trim": "^1.2.7",
+    "string.prototype.trimend": "^1.0.6",
+    "string.prototype.trimstart": "^1.0.6",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-final-newline": "^3.0.0",
+    "strip-indent": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "strip-literal": "^1.0.1",
+    "stylis": "^4.2.0",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "synckit": "^0.8.5",
+    "tapable": "^2.2.1",
+    "tar-fs": "^2.1.1",
+    "tar-stream": "^2.2.0",
+    "text-table": "^0.2.0",
+    "through": "^2.3.8",
+    "tinybench": "^2.5.0",
+    "tinypool": "^0.6.0",
+    "tinyspy": "^2.1.1",
+    "titleize": "^3.0.0",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "toml": "^3.0.0",
+    "tr46": "^0.0.3",
+    "trim-newlines": "^3.0.1",
+    "ts-api-utils": "^1.0.1",
+    "tsconfig-paths": "^3.14.2",
+    "tslib": "^2.6.1",
+    "tunnel-agent": "^0.6.0",
+    "type-check": "^0.4.0",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.20.2",
+    "typed-array-buffer": "^1.0.0",
+    "typed-array-byte-length": "^1.0.0",
+    "typed-array-byte-offset": "^1.0.0",
+    "typed-array-length": "^1.0.4",
+    "ufo": "^1.1.2",
+    "unbox-primitive": "^1.0.2",
+    "undici": "^5.20.0",
+    "universalify": "^2.0.0",
+    "untildify": "^4.0.0",
+    "update-browserslist-db": "^1.0.11",
+    "uri-js": "^4.4.1",
+    "urlpattern-polyfill": "^4.0.3",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "validate-npm-package-name": "^4.0.0",
+    "vite-node": "^0.33.0",
+    "vitest-environment-miniflare": "^2.14.0",
+    "web-auth-library": "^1.0.3",
+    "web-streams-polyfill": "^3.2.1",
+    "webidl-conversions": "^7.0.0",
+    "webpod": "^0.0.2",
+    "websocket-driver": "^0.7.4",
+    "websocket-extensions": "^0.1.4",
+    "whatwg-encoding": "^2.0.0",
+    "whatwg-mimetype": "^3.0.0",
+    "whatwg-url": "^5.0.0",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-typed-array": "^1.1.11",
+    "why-is-node-running": "^2.2.2",
+    "workerd": "^1.20230724.0",
+    "wrangler": "^3.3.0",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.13.0",
+    "xxhash-wasm": "^1.0.2",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "yaml": "^2.3.1",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.9",
+    "yocto-queue": "^1.0.0",
+    "youch": "^3.2.3",
+    "zod": "^3.21.4",
+    "zx": "^7.2.3"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
