--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "liyuxiaowebsite"
-  }
+    "public": "liyuxiaowebsite",
+    "staging": "liyuxiaowebsite"
+  },
+  "targets": {},
+  "etags": {}
 }
