--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,16 @@
 {
-    "hosting": {
-      "public": "public"
-    }
+  "hosting": {
+    "public": "layout",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
