--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "NodeNext",
     "noEmit": true
   },
-  "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.json"],
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.json", "index.js"],
   "exclude": ["dist/**/*", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
