--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitest/coverage-v8": "^0.33.0",
     "envars": "^0.4.0",
     "happy-dom": "^10.5.2",
     "typescript": "~5.1.6",
